# memory-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
client/: CHANGELOG.md  Makefile  README.md  pyproject.toml
client/src/memory_mcp_client/: __init__.py  _batch.py  _retry.py  _session.py  client.py  errors.py
client/src/memory_mcp_client/api/: __init__.py  _base.py  decisions.py  dream.py  entities.py  env_ops.py  envs.py  memories.py  playbooks.py  relations.py  tasks.py
client/tests/: __init__.py  conftest.py  test_env_ops.py  test_errors.py  test_identity.py  test_lifecycle.py  test_namespace_decisions.py  test_namespace_dream.py  test_namespace_entities.py  test_namespace_envs.py  test_namespace_memories.py  test_namespace_playbooks.py  test_namespace_relations.py  test_namespace_tasks.py  test_retry_policy.py  test_smoke.py
client/tests/integration/: __init__.py  conftest.py  test_batch_live.py  test_namespaces_live.py
client/tests/unit/: test_batch.py
dashboards/: memory-mcp.json
deploy/prometheus/: prometheus.yml
docker/: Dockerfile.dream-worker  Dockerfile.projection-worker  Dockerfile.server
docs/: configuration.md  env_ops.md  exploration-tour.md  features.md  observability.md  operations.md  python-client.md  repo-layout.md  system-prompts.md  tools.md
docs/adr/: 0001-auth-phase-2a.md
examples/: client.py  connect-claude-desktop.json  connect-copilot-cli.json
migrations/: README.md  env.py
migrations/versions/: 0001_v1_initial.py  0002_v1_dream.py  0003_v1_dream_heartbeat.py  0004_explore_api_sprint_a.py  0005_explore_api_sprint_b.py  0006_import_source_type.py  0007_trigger_description.py  0008_session_digest.py  0009_playbook_kind_and_macro.py  0010_tasks_table.py  0011_decision_meta.py  0012_dream_decision_conflicts.py  0013_envops_softdelete.py  0014_snapshots_table.py  0015_memory_tombstones.py  0016_cascade_root.py  0017_popularity_counters.py  0018_authority_weighting.py  0019_salience_formula_version.py  0020_compose_dedupe_key.py  0021_decompose_operations.py  0022_message_kind.py  0023_auth_phase2a.py
schemas/: README.md  pyproject.toml
schemas/src/memory_mcp_schemas/: __init__.py  _env_refs.py  browse.py  compose.py  context_pack.py  decisions.py  decompose.py  digest.py  dream.py  entities.py  enums.py  env_ops.py  envs.py  graph.py  inbox.py  journal.py  memories.py  playbooks.py  provenance.py  relations.py  search.py  stats.py  tasks.py  top.py
scripts/: import_from_server_memory.py
src/dream_worker/: __init__.py  decision_conflicts.py  jobs.py  runner.py  scheduler.py
src/memory_mcp/: __init__.py  _filters.py  autowire.py  browse.py  composers.py  config.py  decomposers.py  entities.py  env_resolve.py  envs.py  errors.py  graph.py  identity.py  inbox.py  journal.py  mcp_app.py  memories.py  observability.py  pagination.py  provenance.py  rbac.py  relations.py  server.py  stats.py  top.py  validation_hints.py
src/memory_mcp/cli/: admin.py
src/memory_mcp/context_pack/: __init__.py  api.py  budget.py  models.py
src/memory_mcp/db/: __init__.py  models.py  outbox.py  postgres.py  types.py
src/memory_mcp/decisions/: __init__.py  api.py  models.py  template.py
src/memory_mcp/digest/: __init__.py  api.py  models.py  templates.py
src/memory_mcp/dream/: __init__.py  api.py  salience.py  summarizer.py
src/memory_mcp/embeddings/: __init__.py  azure_openai.py  base.py  local.py
src/memory_mcp/env_ops/: __init__.py  _checksums.py  _embed.py  _io.py  clone.py  delete.py  diff.py  export.py  import_.py  merge.py  migrate.py  rename.py  snapshot.py
src/memory_mcp/llm/: __init__.py  base.py  null.py  ollama.py  openai_compatible.py
src/memory_mcp/playbooks/: __init__.py  api.py  models.py
src/memory_mcp/search/: __init__.py  api.py  (+7 more)
src/projection_worker/: __init__.py  lease.py  runner.py
tests/: __init__.py  conftest.py
tests/cli/: test_admin.py
tests/env_ops/: test_checksums.py  test_clone.py  test_delete.py  test_diff.py  test_export.py  test_import.py  test_import_modes.py  test_jsonl_io.py  test_manifest_roundtrip.py  test_merge.py  test_migrate.py  test_reembed_adapter.py  test_rename.py  test_roundtrip.py  test_snapshot.py  test_softdelete_migration.py
tests/integration/: conftest.py  test_access_bump_preserves_citation.py  test_authority_columns_schema.py  test_autowire_compose.py  test_autowire_decompose.py  test_compose_e2e.py  test_compose_transaction.py  test_decompose_transaction.py  test_dream_recount.py  test_expires_at_filter.py  test_graph_fallback.py  test_inbox.py  test_macro_race.py  test_mem_search_env_names.py  test_mem_stats_tool.py  test_mem_top.py  test_memory_hard_delete.py  test_migration_0021.py  test_migration_0023.py  test_reference_counts.py  test_rel_link_node_race.py  test_task_cycle_race.py
tests/invariants/: test_lifecycle_matrix.py  test_schema.sql
tests/unit/: test_auto_context.py  test_autowire.py  test_autowire_decompose.py  test_browse_schemas.py  test_compose_schemas.py  test_composers.py  test_config.py  test_context_pack.py  test_dashboard_json.py  test_decay.py  test_decisions.py  test_decompose_helpers.py  test_decompose_schemas.py  test_decompose_validators.py  test_dedupe.py  test_digest.py  test_dream_api.py  test_dream_decision_conflicts.py  test_dream_invariants.py  test_dream_jobs.py  test_dream_scheduler.py  test_embedder.py  test_entities.py  test_env_name_property.py  test_env_name_resolution_wave2.py  test_env_resolve.py  test_envs.py  test_errors.py  test_expansion_presets.py  test_expires_at_filter_schemas.py  test_graph_base.py  test_graph_tools.py  test_graph_traversal_relax.py  test_hard_delete_cascade.py  test_identity.py  test_import_from_server_memory.py  test_inbox.py  test_journal.py  test_llm.py  test_mem_copy_move.py  (+39 more)
(+23 files in other folders)
