[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mcp-client"
version = "0.4.0"
description = "Async Python client SDK for memory-mcp (Streamable HTTP MCP transport)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "memory-mcp authors" }]
dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "memory-mcp-schemas>=0.13,<0.14",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[tool.uv.sources]
memory-mcp-schemas = { path = "../schemas", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../schemas/src"]
markers = [
    "integration: live integration tests requiring MEMORY_MCP_INTEGRATION_URL",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
